Fix code formatting
