# packages/database/src/types/enum.ts
@@ -1,18 +1,28 @@
 export enum Weekdays {
-    MONDAY = 1, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY
+  MONDAY = 1,
+  TUESDAY,
+  WEDNESDAY,
+  THURSDAY,
+  FRIDAY,
+  SATURDAY,
+  SUNDAY
 }
 
 export enum FlightRules {
-    IFR = 'IFR', Y = 'Y', Z = 'Z'
+  IFR = 'IFR',
+  Y = 'Y',
+  Z = 'Z'
 }
 
 export enum WakeTurbulence {
-    LIGHT = 'L',
-    MEDIUM = 'M',
-    HEAVY = 'H',
-    SUPER = 'S'
+  LIGHT = 'L',
+  MEDIUM = 'M',
+  HEAVY = 'H',
+  SUPER = 'S'
 }
 
 export default {
-    Weekdays, FlightRules, WakeTurbulence
+  Weekdays,
+  FlightRules,
+  WakeTurbulence
 }
