# packages/rest-api/openapi.json
@@ -21,9 +21,7 @@
   "paths": {
     "/flights": {
       "get": {
-        "tags": [
-          "Flight"
-        ],
+        "tags": ["Flight"],
         "summary": "Returns a list of Paginated Flights",
         "parameters": [
           {
@@ -91,9 +89,7 @@
     },
     "/flights/{id}": {
       "get": {
-        "tags": [
-          "Flight"
-        ],
+        "tags": ["Flight"],
         "summary": "Get a flight by ID.",
         "parameters": [
           {
@@ -212,11 +208,7 @@
           },
           "flightRules": {
             "type": "string",
-            "enum": [
-              "IFR",
-              "Y",
-              "Z"
-            ]
+            "enum": ["IFR", "Y", "Z"]
           },
           "createdAt": {
             "type": "string",
@@ -236,12 +228,7 @@
           },
           "wakeTurbulence": {
             "type": "string",
-            "enum": [
-              "LIGHT",
-              "MEDIUM",
-              "HEAVY",
-              "SUPER"
-            ]
+            "enum": ["LIGHT", "MEDIUM", "HEAVY", "SUPER"]
           },
           "equipment": {
             "type": "string"
